--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "eslint": "^9.13.0",
     "express": "^4.21.1",
     "prettier": "^3.3.3"
