--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "eslint": "^9.13.0",
     "express": "^4.21.1",
+    "express-csp-header": "^5.2.1",
     "prettier": "^3.3.3"
   },
   "devDependencies": {
