--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "2-hazel-park-community-be",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "eslint": "^9.13.0",
     "express": "^4.21.1",
