--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "eslint": "^9.13.0",
     "express": "^4.21.1",
     "express-csp-header": "^5.2.1",
+    "express-session": "^1.18.1",
     "prettier": "^3.3.3"
   },
   "devDependencies": {
