--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "express-csp-header": "^5.2.1",
     "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^3.3.3"
   },
   "devDependencies": {
