--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "express-csp-header": "^5.2.1",
     "express-session": "^1.18.1",
+    "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "prettier": "^3.3.3"
