--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9.13.0",
     "express": "^4.21.1",
     "express-csp-header": "^5.2.1",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
